@@ -68,6 +68,9 @@ all : 01 02 03 04 08
 08-ssl-connect-cert-auth.test : 08-ssl-connect-cert-auth.c
 	$(CC) $< -o $@ $(CFLAGS) $(LIBS)
 
+08-ssl-bad-cacert.test : 08-ssl-bad-cacert.c
+	$(CC) $< -o $@ $(CFLAGS) $(LIBS)
+
 01 : 01-con-discon-success.test 01-will-set.test 01-unpwd-set.test 01-will-unpwd-set.test 01-no-clean-session.test 01-keepalive-pingreq.test
 
 02 : 02-subscribe-qos0.test 02-subscribe-qos1.test 02-subscribe-qos2.test 02-unsubscribe.test
@@ -76,7 +79,7 @@ all : 01 02 03 04 08
 
 04 : 04-retain-qos0.test
 
-08 : 08-ssl-connect-no-auth.test 08-ssl-connect-cert-auth.test
+08 : 08-ssl-connect-no-auth.test 08-ssl-connect-cert-auth.test 08-ssl-bad-cacert.test
 
 reallyclean : clean
 	-rm -f *.orig
